Enhance WSS4J Axis drivers to support SAML token. Note: this is not a full support yet.